syntax = "proto3";
package no.nrc.core.form;

option go_package = "./proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/duration.proto";
import "google/protobuf/descriptor.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/struct.proto";
import "google/protobuf/any.proto";

message FormField {
  string id = 1;
  google.protobuf.Any typed_config = 2;
}

message FormTextField {
  string label = 1;
  optional string value = 2;
  optional string placeholder = 3;
  optional bool disabled = 4;
}

message FormDateField {
  string label = 1;
  optional google.protobuf.Timestamp value = 2;
  optional string placeholder = 3;
  optional bool disabled = 4 ;
}

message FormTimeField {
  string label = 1;
  optional google.protobuf.Duration value = 2;
  optional string placeholder = 3;
  optional bool disabled = 4;
}

message FormSelectOption {
  string label = 1;
  optional string value = 2;
  optional bool disabled = 3;
}

message FormSelectField {
  string label = 1;
  optional string value = 2;
  repeated FormSelectOption options = 3;
  optional string placeholder = 4;
  optional bool disabled = 5;
}

message FormCheckboxField {
  string label = 1;
  optional bool value = 2;
  optional bool disabled = 3;
}

message FormRadioField {
  string label = 1;
  string value = 2;
  repeated FormSelectOption options = 3;
}

message FormTextareaField {
  string label = 1;
  optional string value = 2;
  optional string placeholder = 3;
  optional bool disabled = 4;
  optional int32 rows = 5;
}

message FormFileField {
  string label = 1;
  optional string value = 2;
  optional string placeholder = 3;
  optional bool disabled = 4;
}

message FormDurationField {
  string label = 1;
  optional google.protobuf.Duration value = 2;
  optional string placeholder = 3;
  optional bool disabled = 4;
}

message Form {
  string id = 1;
  string title = 2;
  string description = 3;
  repeated FormField fields = 4;
  map<string, string> fieldSections = 5;
}

message FormSection {
  string id = 1;
  string title = 2;
  string description = 3;
  bool collapsed = 4;
  bool collapsible = 5;
}

message FormValue {
  string id = 1;
  google.protobuf.Value data = 2;
}